--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,4 +19,4 @@ steps:
       - "--region"
       - "northamerica-northeast2"
 options:
-  logging: CLOUD_LOGGING_ONLY
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
